# self-driving-car

./: LICENSE  README.md  pyproject.toml
01_car_driving_mechanics/: car.py  controls.py  docs.excalidraw  main.py
02_road_definition/: car.py  main.py  road.py  utils.py
experiments/: exp.py  exp_1.py  exp_2.py  exp_arcade.py  exp_arcade_2.py  exp_math.ipynb
