[project]
name = "self-driving-car"
version = "0.1.0"
description = "A tutorial on self-driving car simulation using pygame."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arcade>=3.3.2",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "poethepoet>=0.36.0",
    "pygame>=2.6.1",
    "ruff>=0.12.2",
]

[tool.ruff]
line-length = 90
fix = true
show-fixes = true
exclude = ["experiments"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.poe.tasks]
lint = "ruff check ."
format = "ruff format ."
check = ["lint", "format"]
